--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="temperature"><p id="Tomsk"></p></div>
         </div>
         <div class="card" id="spb">
-          <div class="cityName">Санкт-Петербург</div>
+          <div id="spbName">Санкт-Петербург</div>
           <div class="temperature"><p id="Saint-Petersburg"></p></div>
         </div>
         <div class="card">
